--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
         <section>
           <h2>Desserts</h2>
-          <img src="./a.htm" width="40px" height="40px" alt="pie icon"/>
+          <img src="./th.jpg" width="40px" height="40px" alt="pie icon"/>
           <article class="item">
             <p class="dessert">Donut</p><p class="price">1.50</p>
           </article>
